--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,21 @@
 cmake_minimum_required(VERSION 3.16.3)
 
+set(CMAKE_CXX_COMPILER clang++)
+set(CMAKE_CXX_STANDARD 20)
+
+add_compile_options(
+    -Wall
+    -Wextra
+    -Werror
+    -Wpedantic
+
+    -fno-elide-constructors
+)
+
+add_link_options(
+    -fno-elide-constructors
+)
+
 project(Tracing)
 
 set(TRACING_SOURCE src/con_logger.cpp
