--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,14 @@ add_compile_options(
     -Wpedantic
 
     -fno-elide-constructors
+
+    -fsanitize=address
 )
 
 add_link_options(
     -fno-elide-constructors
+
+    -fsanitize=address
 )
 
 project(Tracing)
@@ -21,7 +25,8 @@ project(Tracing)
 set(TRACING_SOURCE src/con_logger.cpp
                    src/func_logger.cpp
                    src/ilogger.cpp
-                   src/log_int.cpp)
+                   src/log_int.cpp
+                   src/log_initer.cpp)
 
 add_executable(Tracing ${TRACING_SOURCE} src/main.cpp)
 target_include_directories(Tracing PUBLIC include/)
